--- a/Notebook 1: Ingestão e Benchmarking de Performance.ipynb
+++ b/Notebook 1: Ingestão e Benchmarking de Performance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "de79ea13-1a35-47c6-b221-ec38c238e7ae",
    "metadata": {},
    "outputs": [
@@ -10,55 +10,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Status da Conexão: {'address': '172.17.0.1:19540', 'user': ''}\n"
+      "✓ Conectado com sucesso ao Milvus em localhost:19540\n"
      ]
     }
    ],
    "source": [
     "import time, psutil, json, numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "from pymilvus import connections, FieldSchema, CollectionSchema, DataType, Collection, utility\n",
     "\n",
-    "# Configurações DGX\n",
-    "MILVUS_HOST = \"172.17.0.1\" \n",
-    "MILVUS_PORT = \"19540\"\n",
-    "COLLECTION_NAME = \"lfw_cosface_tta\"\n",
+    "# Configuração Local\n",
     "\n",
-    "connections.connect(\"default\", host=MILVUS_HOST, port=MILVUS_PORT)\n",
-    "print(f\"Status da Conexão: {connections.get_connection_addr('default')}\")"
+    "MILVUS_HOST = \"localhost\"  # ou \"127.0.0.1\"\n",
+    "MILVUS_PORT = \"19540\"      # Porta padrão do Milvus (verifique seu docker-compose)\n",
+    "COLLECTION_NAME = \"lfw_cosface_modular\"\n",
+    "\n",
+    "def connect_to_milvus():\n",
+    "    try:\n",
+    "        # Tenta conectar. Se já existir, ele apenas confirma.\n",
+    "        connections.connect(\"default\", host=MILVUS_HOST, port=MILVUS_PORT)\n",
+    "        print(f\"✓ Conectado com sucesso ao Milvus em {MILVUS_HOST}:{MILVUS_PORT}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"✗ Erro ao conectar: {e}\")\n",
+    "\n",
+    "connect_to_milvus()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "64fd4c52-0c3c-4da0-904e-55e1216d1c68",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coleção criada com sucesso.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "if utility.has_collection(COLLECTION_NAME):\n",
-    "    utility.drop_collection(COLLECTION_NAME)\n",
+    "def setup_collection(name, dim, recreate=True):\n",
+    "    if utility.has_collection(name) and recreate:\n",
+    "        utility.drop_collection(name)\n",
+    "        print(f\"✓ Coleção {name} removida para reinício.\")\n",
     "\n",
-    "fields = [\n",
-    "    FieldSchema(name=\"id\", dtype=DataType.INT64, is_primary=True, auto_id=True),\n",
-    "    FieldSchema(name=\"label\", dtype=DataType.VARCHAR, max_length=500),\n",
-    "    FieldSchema(name=\"embedding\", dtype=DataType.FLOAT_VECTOR, dim=1024) # TTA habilitado\n",
-    "]\n",
-    "schema = CollectionSchema(fields, \"Benchmark LFW CosFace TTA\")\n",
-    "collection = Collection(COLLECTION_NAME, schema)\n",
-    "print(\"Coleção criada com sucesso.\")"
+    "    fields = [\n",
+    "        FieldSchema(name=\"id\", dtype=DataType.INT64, is_primary=True, auto_id=True),\n",
+    "        FieldSchema(name=\"person_id\", dtype=DataType.VARCHAR, max_length=256), # Metadado\n",
+    "        FieldSchema(name=\"image_path\", dtype=DataType.VARCHAR, max_length=512), # Metadado\n",
+    "        FieldSchema(name=\"embedding\", dtype=DataType.FLOAT_VECTOR, dim=dim)\n",
+    "    ]\n",
+    "    schema = CollectionSchema(fields, \"Processamento Modular CosFace\")\n",
+    "    return Collection(name, schema)\n",
+    "\n",
+    "collection = setup_collection(COLLECTION_NAME, 1024)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "9bfbcf0c-0254-4417-b8cc-1e7777301283",
    "metadata": {},
    "outputs": [
@@ -66,72 +69,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-> Iniciando Benchmarking de Ingestão para 13233 vetores...\n",
+      "-> Iniciando Ingestão Individual (100 vetores)...\n",
+      "⏱️ Tempo Método A: 2.8092s (35.60 vps)\n",
+      "-> Iniciando Ingestão em Lote (13233 vetores)...\n",
+      "⏱️ Tempo Método B: 72.9829s (181.32 vps)\n",
       "\n",
-      "[MÉTODO A] Inserindo 100 amostras individualmente para medir latência...\n",
-      "  - Tempo Total (100 vetores): 0.2618s\n",
-      "  - Consumo de RAM Adicional: 0.01 MB\n",
-      "  - Throughput: 381.90 vetores/seg\n",
-      "\n",
-      "[MÉTODO B] Inserindo restante (13133) em lote (Batch: 1000)...\n",
-      "  - Tempo Total: 5.9270s\n",
-      "  - Consumo de RAM Adicional: 6.13 MB\n",
-      "  - Throughput: 2215.78 vetores/seg\n",
-      "\n",
-      "========================================\n",
-      "RESULTADO: O Método Bulk foi 5.8x mais eficiente.\n",
-      "========================================\n"
+      "🏆 CONCLUSÃO: O Método Bulk é 5.1x mais rápido localmente.\n"
      ]
     }
    ],
    "source": [
-    "embeddings = np.load(\"assets/lfw_resnet_embeddings.npy\").astype('float32')\n",
-    "with open(\"assets/lfw_resnet_names.json\", 'r') as f:\n",
-    "    labels = json.load(f)\n",
+    "import time, psutil, json, numpy as np\n",
     "\n",
-    "process = psutil.Process()\n",
-    "num_vectors = len(embeddings)\n",
+    "def run_individual_insertion(coll, embeddings, labels, limit=100):\n",
+    "    \"\"\"MÉTODO A: Inserção Individual (Síncrona)\"\"\"\n",
+    "    print(f\"-> Iniciando Ingestão Individual ({limit} vetores)...\")\n",
+    "    t_start = time.time()\n",
+    "    \n",
+    "    for i in range(limit):\n",
+    "        # Inserindo um por um no formato de lista de listas\n",
+    "        coll.insert([\n",
+    "            [labels[i]], \n",
+    "            [f\"local_path/{labels[i]}.jpg\"], \n",
+    "            [embeddings[i].tolist()]\n",
+    "        ])\n",
+    "    \n",
+    "    total_time = time.time() - t_start\n",
+    "    print(f\"⏱️ Tempo Método A: {total_time:.4f}s ({limit/total_time:.2f} vps)\")\n",
+    "    return total_time\n",
     "\n",
-    "print(f\"-> Iniciando Benchmarking de Ingestão para {num_vectors} vetores...\")\n",
+    "def run_bulk_insertion(coll, embeddings, labels, batch_size=1000):\n",
+    "    \"\"\"MÉTODO B: Inserção em Lote (Bulk)\"\"\"\n",
+    "    num_total = len(embeddings)\n",
+    "    print(f\"-> Iniciando Ingestão em Lote ({num_total} vetores)...\")\n",
+    "    t_start = time.time()\n",
+    "    \n",
+    "    for i in range(0, num_total, batch_size):\n",
+    "        end = i + batch_size\n",
+    "        batch_labels = labels[i:end]\n",
+    "        batch_vectors = embeddings[i:end].tolist()\n",
+    "        # Gerando caminhos simulados para os metadados\n",
+    "        paths = [f\"local_path/{label}.jpg\" for label in batch_labels]\n",
+    "        \n",
+    "        coll.insert([batch_labels, paths, batch_vectors])\n",
+    "    \n",
+    "    coll.flush() # Força a persistência dos dados\n",
+    "    total_time = time.time() - t_start\n",
+    "    print(f\"⏱️ Tempo Método B: {total_time:.4f}s ({num_total/total_time:.2f} vps)\")\n",
+    "    return total_time\n",
     "\n",
-    "# --- MÉTODO A: Individual (Síncrono) ---\n",
-    "print(\"\\n[MÉTODO A] Inserindo 100 amostras individualmente para medir latência...\")\n",
-    "mem_start_a = process.memory_info().rss / (1024 * 1024)\n",
-    "t0 = time.time()\n",
+    "# --- EXECUÇÃO COM CAMINHOS ATUALIZADOS ---\n",
+    "try:\n",
+    "    # Atualizado de 'assets' para 'recursos' conforme sua mudança\n",
+    "    emb_data = np.load(\"recursos/lfw_resnet_embeddings.npy\").astype('float32')\n",
+    "    with open(\"recursos/lfw_resnet_names.json\", 'r') as f:\n",
+    "        label_data = json.load(f)\n",
     "\n",
-    "for i in range(100):\n",
-    "    collection.insert([[labels[i]], [embeddings[i].tolist()]])\n",
+    "    # Executando os dois métodos para comparação\n",
+    "    time_a = run_individual_insertion(collection, emb_data, label_data, limit=100)\n",
+    "    time_b = run_bulk_insertion(collection, emb_data, label_data, batch_size=1000)\n",
     "\n",
-    "tempo_a = time.time() - t0\n",
-    "mem_end_a = process.memory_info().rss / (1024 * 1024)\n",
-    "vps_a = 100 / tempo_a\n",
+    "    # Cálculo de eficiência comparativa\n",
+    "    vps_a = 100 / time_a\n",
+    "    vps_b = len(emb_data) / time_b\n",
+    "    print(f\"\\n🏆 CONCLUSÃO: O Método Bulk é {vps_b / vps_a:.1f}x mais rápido localmente.\")\n",
     "\n",
-    "print(f\"  - Tempo Total (100 vetores): {tempo_a:.4f}s\")\n",
-    "print(f\"  - Consumo de RAM Adicional: {mem_end_a - mem_start_a:.2f} MB\")\n",
-    "print(f\"  - Throughput: {vps_a:.2f} vetores/seg\")\n",
-    "\n",
-    "# --- MÉTODO B: Bulk (Lote) ---\n",
-    "print(f\"\\n[MÉTODO B] Inserindo restante ({num_vectors-100}) em lote (Batch: 1000)...\")\n",
-    "mem_start_b = process.memory_info().rss / (1024 * 1024)\n",
-    "t1 = time.time()\n",
-    "batch_size = 1000\n",
-    "\n",
-    "for i in range(100, num_vectors, batch_size):\n",
-    "    end = min(i + batch_size, num_vectors)\n",
-    "    collection.insert([labels[i:end], embeddings[i:end].tolist()])\n",
-    "\n",
-    "collection.flush() # Garante a persistência no disco\n",
-    "tempo_b = time.time() - t1\n",
-    "mem_end_b = process.memory_info().rss / (1024 * 1024)\n",
-    "vps_b = (num_vectors - 100) / tempo_b\n",
-    "\n",
-    "print(f\"  - Tempo Total: {tempo_b:.4f}s\")\n",
-    "print(f\"  - Consumo de RAM Adicional: {mem_end_b - mem_start_b:.2f} MB\")\n",
-    "print(f\"  - Throughput: {vps_b:.2f} vetores/seg\")\n",
-    "\n",
-    "print(\"\\n\" + \"=\"*40)\n",
-    "print(f\"RESULTADO: O Método Bulk foi {vps_b/vps_a:.1f}x mais eficiente.\")\n",
-    "print(\"=\"*40)"
+    "except FileNotFoundError as e:\n",
+    "    print(f\"❌ ERRO: Verifique se os arquivos estão na pasta 'recursos'. Detalhe: {e}\")"
    ]
   },
   {
@@ -145,7 +149,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "face",
    "language": "python",
    "name": "python3"
   },
@@ -159,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
