--- a/Notebook 2: Indexação e Busca.ipynb
+++ b/Notebook 2: Indexação e Busca.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "8ff34cfb-d7cc-491e-8a82-4a2c0119e594",
+   "execution_count": 20,
+   "id": "7ea62a56",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Criando índice HNSW na DGX...\n",
-      "Índice criado em 0.51s\n",
-      "Carga de CPU durante indexação: 14.5%\n"
+      "-> Conectando ao Milvus em localhost:19540...\n",
+      "✓ Coleção 'lfw_cosface_modular' vinculada.\n",
+      "-> Carregando embeddings de teste para a memória...\n",
+      "✓ 13233 embeddings carregados com sucesso de 'recursos/'.\n"
      ]
     }
    ],
@@ -20,26 +21,61 @@
     "import time, psutil, numpy as np\n",
     "from pymilvus import connections, Collection\n",
     "\n",
-    "# O Notebook 2 precisa da sua própria conexão\n",
-    "connections.connect(\"default\", host=\"172.17.0.1\", port=\"19540\")\n",
-    "collection = Collection(\"lfw_cosface_tta\")\n",
+    "# 1. Configurações de Conexão (Local)\n",
+    "MILVUS_HOST = \"localhost\"\n",
+    "MILVUS_PORT = \"19540\" # Porta mapeada no seu Docker local\n",
+    "COLLECTION_NAME = \"lfw_cosface_modular\"\n",
     "\n",
-    "index_params = {\n",
-    "    \"metric_type\": \"COSINE\",\n",
-    "    \"index_type\": \"HNSW\",\n",
-    "    \"params\": {\"M\": 16, \"efConstruction\": 256}\n",
-    "}\n",
+    "print(f\"-> Conectando ao Milvus em {MILVUS_HOST}:{MILVUS_PORT}...\")\n",
+    "connections.connect(\"default\", host=MILVUS_HOST, port=MILVUS_PORT)\n",
     "\n",
-    "print(\"Criando índice HNSW na DGX...\")\n",
-    "t_start = time.time()\n",
-    "collection.create_index(field_name=\"embedding\", index_params=index_params)\n",
-    "print(f\"Índice criado em {time.time() - t_start:.2f}s\")\n",
-    "print(f\"Carga de CPU durante indexação: {psutil.cpu_percent(interval=1)}%\")"
+    "# 2. Definir a coleção para este kernel\n",
+    "collection = Collection(COLLECTION_NAME)\n",
+    "print(f\"✓ Coleção '{COLLECTION_NAME}' vinculada.\")\n",
+    "\n",
+    "# 3. CARREGAR OS DADOS (Necessário para a busca)\n",
+    "# Usando a pasta 'recursos' conforme sua alteração\n",
+    "print(\"-> Carregando embeddings de teste para a memória...\")\n",
+    "try:\n",
+    "    emb_data = np.load(\"recursos/lfw_resnet_embeddings.npy\").astype('float32')\n",
+    "    print(f\"✓ {len(emb_data)} embeddings carregados com sucesso de 'recursos/'.\")\n",
+    "except FileNotFoundError:\n",
+    "    print(\"❌ ERRO: Arquivo não encontrado em 'recursos/lfw_resnet_embeddings.npy'.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
+   "id": "8ff34cfb-d7cc-491e-8a82-4a2c0119e594",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-> Construindo índice HNSW...\n",
+      "✓ Índice concluído em 1.20s\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_hnsw_index(coll):\n",
+    "    index_params = {\n",
+    "        \"metric_type\": \"COSINE\",\n",
+    "        \"index_type\": \"HNSW\",\n",
+    "        \"params\": {\"M\": 16, \"efConstruction\": 256}\n",
+    "    }\n",
+    "    print(\"-> Construindo índice HNSW...\")\n",
+    "    start = time.time()\n",
+    "    coll.create_index(field_name=\"embedding\", index_params=index_params)\n",
+    "    print(f\"✓ Índice concluído em {time.time() - start:.2f}s\")\n",
+    "\n",
+    "create_hnsw_index(collection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "63bc8484-82b1-42e1-92bb-370fd95c66b1",
    "metadata": {},
    "outputs": [
@@ -47,64 +83,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-> Carregando coleção na memória RAM...\n",
-      "🔎 Realizando 100 buscas de reconhecimento facial...\n",
+      "⚡ Latência média: 63.23 ms\n",
       "\n",
-      "-----------------------------------\n",
-      "Tempo Total (100 buscas): 0.0231s\n",
-      "Latência Média por Rosto: 0.23 ms\n",
-      "Top-1 Encontrado: Rustu_Recber/Rustu_Recber_0001.jpg\n",
-      "Distância (Cosine): 1.0000\n",
-      "-----------------------------------\n"
+      "Melhor Correspondência:\n",
+      "ID: Rustu_Recber/Rustu_Recber_0001.jpg\n",
+      "Caminho: local_path/Rustu_Recber/Rustu_Recber_0001.jpg.jpg\n",
+      "Score de Similaridade: 1.0000\n"
      ]
     }
    ],
    "source": [
-    "# Essencial garantir que o banco está na RAM\n",
-    "print(\"-> Carregando coleção na memória RAM...\")\n",
-    "collection.load() \n",
+    "def perform_search(coll, query_vectors, top_k=3):\n",
+    "    coll.load()\n",
+    "    start_time = time.time()\n",
+    "    \n",
+    "    # Busca solicitando os metadados person_id e image_path\n",
+    "    results = coll.search(\n",
+    "        data=query_vectors.tolist(), \n",
+    "        anns_field=\"embedding\", \n",
+    "        param={\"metric_type\": \"COSINE\", \"params\": {\"ef\": 64}}, \n",
+    "        limit=top_k,\n",
+    "        output_fields=[\"person_id\", \"image_path\"]\n",
+    "    )\n",
+    "    \n",
+    "    latency = (time.time() - start_time) / len(query_vectors)\n",
+    "    \n",
+    "    print(f\"⚡ Latência média: {latency*1000:.2f} ms\")\n",
+    "    \n",
+    "    # Exemplo formatado do primeiro resultado\n",
+    "    first_hit = results[0][0]\n",
+    "    print(f\"\\nMelhor Correspondência:\")\n",
+    "    print(f\"ID: {first_hit.entity.get('person_id')}\")\n",
+    "    print(f\"Caminho: {first_hit.entity.get('image_path')}\")\n",
+    "    print(f\"Score de Similaridade: {first_hit.distance:.4f}\")\n",
     "\n",
-    "# Carregamento dos embeddings (verifique se a pasta assets está no mesmo nível do .ipynb)\n",
-    "embeddings = np.load(\"assets/lfw_resnet_embeddings.npy\")\n",
-    "\n",
-    "num_queries = 100\n",
-    "print(f\"🔎 Realizando {num_queries} buscas de reconhecimento facial...\")\n",
-    "\n",
-    "start = time.time()\n",
-    "results = collection.search(\n",
-    "    data=embeddings[:num_queries].tolist(), \n",
-    "    anns_field=\"embedding\", \n",
-    "    param={\"metric_type\": \"COSINE\", \"params\": {\"ef\": 64}}, \n",
-    "    limit=3,\n",
-    "    output_fields=[\"label\"]\n",
-    ")\n",
-    "total_time = time.time() - start\n",
-    "latencia = (total_time / num_queries) * 1000\n",
-    "\n",
-    "print(\"\\n\" + \"-\" * 35)\n",
-    "print(f\"Tempo Total (100 buscas): {total_time:.4f}s\")\n",
-    "print(f\"Latência Média por Rosto: {latencia:.2f} ms\")\n",
-    "\n",
-    "if results and len(results[0]) > 0:\n",
-    "    print(f\"Top-1 Encontrado: {results[0][0].entity.get('label')}\")\n",
-    "    print(f\"Distância (Cosine): {results[0][0].distance:.4f}\")\n",
-    "else:\n",
-    "    print(\"Nenhum resultado encontrado.\")\n",
-    "print(\"-\" * 35)"
+    "# Testar com as primeiras 100 queries\n",
+    "perform_search(collection, emb_data[:100])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a1103a6a-9085-42be-a1cb-c888028e208e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "face",
    "language": "python",
    "name": "python3"
   },
@@ -118,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
